Passo a passo de gatling utilizando maven